--- a/fcss/css.html
+++ b/fcss/css.html
@@ -77,6 +77,12 @@
 	 		</div>
 	 	</div>
 	 </div>
+	 <footer style="height:150px;background:#f5f5f5;border-top:1px solid #e5e5e5;margin-top:70px;">
+	 	<div class="container" style="text-align:center;">
+	 		<p>This is Furufuru Style Framework.</p>
+	 		<p>Now developing.</p>
+	 	</div>
+	 </footer>
 </body>
 <script src="js/bootstrap.min.js"></script>
 </html>
