--- a/fcss/css.html
+++ b/fcss/css.html
@@ -4,7 +4,7 @@
 	<title>Furufuru Framework:: Fcss</title>
 	<link href="css/bootstrap-responsive.min.css" rel="stylesheet">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<style>*{margin:0;}body {padding-top: 40px;}</style>
+	<style>*{margin:0;}body {padding-top: 40px;}::selection {background: #9d2cde;color: #ffffff;}</style>
 	<link href="css/fcss.css" rel="stylesheet">
 </head>
 <body>
@@ -55,7 +55,7 @@
 	 			</div>
 	 			<p>Code:</p>
 <pre>
-&lt;a class="button1"&gt; BUTTON&lt;/a&gt;
+&lt;a class="button1"&gt;BUTTON&lt;/a&gt;
 </pre>
 	 			<p>Table of button:</p>
 	 			<table class="table table-bordered">
@@ -74,6 +74,39 @@
 	 				</tr>
 	 				</tbody>
 	 			</table>
+
+	 			<h2>Button2</h2>
+	 			<p>This is button2.</p>
+	 			<div class="well">
+	 				<a class="button2" href="#">BUTTON</a>
+	 			</div>
+	 			<p>Code:</p>
+<pre>
+&lt;a class="button2"&gt;BUTTON&lt;/a&gt;
+</pre>
+	 			<p>Table of button:</p>
+	 			<table class="table table-bordered">
+	 				<thead>
+	 				<tr>
+	 					<th>class</th>
+	 					<th>Button</th>
+	 					<th>Description</th>
+	 				</tr>
+	 				</thead>
+	 				<tbody>
+	 				<tr>
+	 					<th><code>button2</code></th>
+	 					<th style="text-align:center;"><a class="button2" href="#">Default</a></th>
+	 					<th><p>Default style.</p></th>
+	 				</tr>
+	 				<tr>
+	 					<th><code>button2 pink</code></th>
+	 					<th style="text-align:center;"><a class="button2 pink" href="#">Pink</a></th>
+	 					<th><p>Dirty pink</p></th>
+	 				</tr>
+	 				</tbody>
+	 			</table>
+
 	 		</div>
 	 	</div>
 	 </div>
