--- a/fcss/css.html
+++ b/fcss/css.html
@@ -4,7 +4,7 @@
 	<title>Furufuru Framework:: Fcss</title>
 	<link href="css/bootstrap-responsive.min.css" rel="stylesheet">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<style>*{margin:0;}body {padding-top: 40px;}::selection {background: #c0392b;color: #ffffff;}.affix{top:70px;}</style>
+	<style>*{margin:0;}body {padding-top: 40px;}::selection {background: #ff2d2d;color: #ffffff;}.affix{top:70px;}</style>
 	<link href="css/fcss.css" rel="stylesheet">
 </head>
 <body>
@@ -75,6 +75,21 @@
 	 					<th style="text-align:center;"><a class="button1" href="#">Default</a></th>
 	 					<th><p>Default style.</p></th>
 	 				</tr>
+	 				<tr>
+	 					<th><code>button1 green</code></th>
+	 					<th style="text-align:center;"><a class="button1 green" href="#">Green</a></th>
+	 					<th><p>Green.</p></th>
+	 				</tr>
+	 				<tr>
+	 					<th><code>button1 blue</code></th>
+	 					<th style="text-align:center;"><a class="button1 blue" href="#">Blue</a></th>
+	 					<th><p>Blue.</p></th>
+	 				</tr>
+	 				<tr>
+	 					<th><code>button1 ref</code></th>
+	 					<th style="text-align:center;"><a class="button1 red" href="#">Red</a></th>
+	 					<th><p>Red.</p></th>
+	 				</tr>
 	 				</tbody>
 	 			</table>
 
@@ -126,8 +141,9 @@
 	 </div>
 	 <footer style="height:150px;background:#f5f5f5;border-top:1px solid #e5e5e5;margin-top:70px;">
 	 	<div class="container" style="text-align:center;">
-	 		<p>This is Furufuru Style Framework.</p>
+	 		<p style="padding-top:40px;">This is Furufuru Style Framework.</p>
 	 		<p>Now developing.</p>
+	 		<p><a href="http://flatuicolors.com/">Flat UI Colors</a></p>
 	 	</div>
 	 </footer>
 </body>
