--- a/fcss/index.html
+++ b/fcss/index.html
@@ -24,7 +24,7 @@
 	 <div class="container">
 	 	<div class="hero-unit">
 	 		<h1 class="title">Furufuru Style Framework</h1>
-	 		<p>This is my css framework....</p>
+	 		<p>パーツ毎のフレームワーク。別のフレームワークと一緒に使うといいです。</p>
 	 		<p>Now developing.</p>
 	 		<a class="button1" href="#">Download</a>
 	 	</div>
