--- a/fcss/css.html
+++ b/fcss/css.html
@@ -86,7 +86,7 @@
 	 					<th><p>Blue.</p></th>
 	 				</tr>
 	 				<tr>
-	 					<th><code>button1 ref</code></th>
+	 					<th><code>button1 red</code></th>
 	 					<th style="text-align:center;"><a class="button1 red" href="#">Red</a></th>
 	 					<th><p>Red.</p></th>
 	 				</tr>
@@ -113,14 +113,24 @@
 	 				</thead>
 	 				<tbody>
 	 				<tr>
-	 					<th><code>button2</code></th>
+	 					<th><code>button1</code></th>
 	 					<th style="text-align:center;"><a class="button2" href="#">Default</a></th>
 	 					<th><p>Default style.</p></th>
 	 				</tr>
 	 				<tr>
-	 					<th><code>button2 pink</code></th>
-	 					<th style="text-align:center;"><a class="button2 pink" href="#">Pink</a></th>
-	 					<th><p>Dirty pink</p></th>
+	 					<th><code>button1 green</code></th>
+	 					<th style="text-align:center;"><a class="button2 green" href="#">Green</a></th>
+	 					<th><p>Green.</p></th>
+	 				</tr>
+	 				<tr>
+	 					<th><code>button1 blue</code></th>
+	 					<th style="text-align:center;"><a class="button2 blue" href="#">Blue</a></th>
+	 					<th><p>Blue.</p></th>
+	 				</tr>
+	 				<tr>
+	 					<th><code>button1 red</code></th>
+	 					<th style="text-align:center;"><a class="button2 red" href="#">Red</a></th>
+	 					<th><p>Red.</p></th>
 	 				</tr>
 	 				</tbody>
 	 			</table>
