--- a/fcss/css.html
+++ b/fcss/css.html
@@ -60,7 +60,7 @@
 <pre>
 &lt;a class="button1"&gt;BUTTON&lt;/a&gt;
 </pre>
-	 			<p>Table of button:</p>
+	 			<p>Colors of buttons:</p>
 	 			<table class="table table-bordered">
 	 				<thead>
 	 				<tr>
@@ -90,6 +90,11 @@
 	 					<th style="text-align:center;"><a class="button1 red" href="#">Red</a></th>
 	 					<th><p>Red.</p></th>
 	 				</tr>
+	 				<tr>
+	 					<th><code>button1 purple</code></th>
+	 					<th style="text-align:center;"><a class="button1 purple" href="#">Purple</a></th>
+	 					<th><p>Purple.</p></th>
+	 				</tr>
 	 				</tbody>
 	 			</table>
 
@@ -102,7 +107,7 @@
 <pre>
 &lt;a class="button2"&gt;BUTTON&lt;/a&gt;
 </pre>
-	 			<p>Table of button:</p>
+	 			<p>Colors of buttons:</p>
 	 			<table class="table table-bordered">
 	 				<thead>
 	 				<tr>
@@ -113,24 +118,29 @@
 	 				</thead>
 	 				<tbody>
 	 				<tr>
-	 					<th><code>button1</code></th>
+	 					<th><code>button2</code></th>
 	 					<th style="text-align:center;"><a class="button2" href="#">Default</a></th>
 	 					<th><p>Default style.</p></th>
 	 				</tr>
 	 				<tr>
-	 					<th><code>button1 green</code></th>
+	 					<th><code>button2 green</code></th>
 	 					<th style="text-align:center;"><a class="button2 green" href="#">Green</a></th>
 	 					<th><p>Green.</p></th>
 	 				</tr>
 	 				<tr>
-	 					<th><code>button1 blue</code></th>
+	 					<th><code>button2 blue</code></th>
 	 					<th style="text-align:center;"><a class="button2 blue" href="#">Blue</a></th>
 	 					<th><p>Blue.</p></th>
 	 				</tr>
 	 				<tr>
-	 					<th><code>button1 red</code></th>
+	 					<th><code>button2 red</code></th>
 	 					<th style="text-align:center;"><a class="button2 red" href="#">Red</a></th>
 	 					<th><p>Red.</p></th>
+	 				</tr>
+	 				<tr>
+	 					<th><code>button2 purple</code></th>
+	 					<th style="text-align:center;"><a class="button2 purple" href="#">Purple</a></th>
+	 					<th><p>Purple.</p></th>
 	 				</tr>
 	 				</tbody>
 	 			</table>
